# binary-slicer

./: .gitmodules  CMakeLists.txt  CMakeSettings.json
include/: mdar_public.h
src/: mdar_module_saver.cpp  mdar_modules.cpp  mdar_modules.h  mdar_parser.cpp  mdar_parser.h  mdar_parser_coredump.cpp  mdar_parser_minidump.cpp  mdar_parser_minidump.h  mdar_public.cpp  ntdefs.h  pe.h
src/cli/: cli.cpp  cli_modules.cpp  cli_modules.h
